master|hotfix: fix validation error
