# pkg/api/gateway/v1/gateway.pb.validate.go
@@ -450,3 +450,247 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = MinerTemplateValidationError{}
+
+// Validate checks the field values on ListMinerSetRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ListMinerSetRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ListMinerSetRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ListMinerSetRequestMultiError, or nil if none found.
+func (m *ListMinerSetRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ListMinerSetRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Limit
+
+	// no validation rules for Offset
+
+	if len(errors) > 0 {
+		return ListMinerSetRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// ListMinerSetRequestMultiError is an error wrapping multiple validation
+// errors returned by ListMinerSetRequest.ValidateAll() if the designated
+// constraints aren't met.
+type ListMinerSetRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ListMinerSetRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ListMinerSetRequestMultiError) AllErrors() []error { return m }
+
+// ListMinerSetRequestValidationError is the validation error returned by
+// ListMinerSetRequest.Validate if the designated constraints aren't met.
+type ListMinerSetRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListMinerSetRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListMinerSetRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListMinerSetRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListMinerSetRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListMinerSetRequestValidationError) ErrorName() string {
+	return "ListMinerSetRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListMinerSetRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListMinerSetRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListMinerSetRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListMinerSetRequestValidationError{}
+
+// Validate checks the field values on ListMinerSetResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ListMinerSetResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ListMinerSetResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ListMinerSetResponseMultiError, or nil if none found.
+func (m *ListMinerSetResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ListMinerSetResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for TotalCount
+
+	for idx, item := range m.GetMinerSets() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, ListMinerSetResponseValidationError{
+						field:  fmt.Sprintf("MinerSets[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, ListMinerSetResponseValidationError{
+						field:  fmt.Sprintf("MinerSets[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ListMinerSetResponseValidationError{
+					field:  fmt.Sprintf("MinerSets[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return ListMinerSetResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// ListMinerSetResponseMultiError is an error wrapping multiple validation
+// errors returned by ListMinerSetResponse.ValidateAll() if the designated
+// constraints aren't met.
+type ListMinerSetResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ListMinerSetResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ListMinerSetResponseMultiError) AllErrors() []error { return m }
+
+// ListMinerSetResponseValidationError is the validation error returned by
+// ListMinerSetResponse.Validate if the designated constraints aren't met.
+type ListMinerSetResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListMinerSetResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListMinerSetResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListMinerSetResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListMinerSetResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListMinerSetResponseValidationError) ErrorName() string {
+	return "ListMinerSetResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListMinerSetResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListMinerSetResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListMinerSetResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListMinerSetResponseValidationError{}
